default pref values

--- a/popup.html
+++ b/popup.html
@@ -27,11 +27,12 @@ reapply
 -->
 
 
-    <ul class="mdc-list">
+<!--    <ul class="mdc-list">
       
-	<li class="mdc-list-item" tabindex="0"> 
-
-	    <label for="on">on</label>
+	<li class="mdc-list-item" tabindex="0"> -->
+	  
+	  <div class="row">
+	  <label for="on">on</label>
 	
 	<div class="mdc-switch" id="on" style="position:relative; float:right">
 	  <div class="mdc-switch__track"></div>
@@ -41,20 +42,19 @@ reapply
 	  </div>
 	</div>
 	
-	</li>
-	    <li class="mdc-list-item" tabindex="0">
-
-
-	<label for="touch-latin">touch latin</label>
-	
-	<div class="mdc-switch" id="touch-latin" style="position:relative; float:right">
-	  <div class="mdc-switch__track"></div>
-	  <div class="mdc-switch__thumb-underlay">
-	    <div class="mdc-switch__thumb"></div>
-	    <input type="checkbox" id="touch-latin" class="mdc-switch__native-control" role="switch" aria-checked="false">
 	  </div>
-	</div>
-    </ul>
+	  
+	  <div class="row">
+	    <label for="touch-latin">touch latin</label>
+	    
+	    <div class="mdc-switch" id="touch-latin" style="position:relative; float:right">
+	      <div class="mdc-switch__track"></div>
+	      <div class="mdc-switch__thumb-underlay">
+		<div class="mdc-switch__thumb"></div>
+		<input type="checkbox" id="touch-latin" class="mdc-switch__native-control" role="switch" aria-checked="false">
+	      </div>
+	    </div>
+	  </div>
 
     <button class="mdc-button foo-button">
       <div class="mdc-button__ripple"></div>
